src/test/resources/private/typechecking/fail/access/access_multitest_01.jova
class Test{
  private int invisible;
  public int visible;
  private int dontTouchMe(){
    return 0;
  }

  private int dontTouchMeEither(int x){
    return this.invisible;
  }

  public int pleaseTouchMe(int x){
    return 69;
  }
}

class Testing {
  private int x;

  public int test() {
        Test test;
        test = new Test;
        x = test.pleaseTouchMe();
        x = test.pleaseTouchMe(0,0);
        x = test.pleaseTouchMe(0);
        x = test.dontTouchMe();
        x = test.dontTouchMeEither(0);
        x = test.dontTouchMeEither(0,0);
        x = test.pleaseTouchMe(test.invisible);
        x = test.pleaseTouchMe(test.visible);
        return test.pleaseTouchMe(this.x);
    }
}